acsl2r/grammar/acsl/AcslParser.js
// Generated from Acsl.g4 by ANTLR 4.6
// jshint ignore: start
var antlr4 = require('antlr4/index');
var AcslListener = require('./AcslListener').AcslListener;
var AcslVisitor = require('./AcslVisitor').AcslVisitor;

var grammarFileName = "Acsl.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "';'", "':'", "'**'", "'^'", "'-'", 
                     "'+'", "'*'", null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     "'='", "'<'", "'>'", "','", "'/'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, "PROGRAM", "END", "DISCRETE", "INTERVAL", "SCHEDULE", 
                      "INITIAL", "TERMINAL", "CONSTANT", "DYNAMIC", "ALGORITHM", 
                      "MAXTERVAL", "MINTERVAL", "CINTERVAL", "NSTEPS", "DERIVATIVE", 
                      "AND", "EQ", "GE", "GT", "LE", "LT", "NE", "OR", "XOR", 
                      "AT", "IF", "THEN", "ELSE", "ENDIF", "ENDSPACEIF", 
                      "PROCEDURAL", "TRUE", "FALSE", "NOT", "TABLE", "PARAMETER", 
                      "DO", "CONTINUE", "GO", "TO", "CALL", "VARIABLE", 
                      "DIMENSION", "REAL", "DOUBLEPRECISION", "INTEGER", 
                      "LOGICAL", "CHARACTER", "STRING", "INT", "FLOAT", 
                      "ID", "EQUALS", "LESSTHAN", "GREATERTHAN", "COMMA", 
                      "SLASH", "COMMENT", "WS" ];

var ruleNames =  [ "acsl", "program", "statement", "discrete", "interval", 
                   "initial", "terminal", "constant", "schedule", "dynamic", 
                   "algorithm", "maxterval", "minterval", "cinterval", "nsteps", 
                   "derivative", "if_block", "else_if_end_block", "then_block", 
                   "if_logical", "table", "parameter", "do_continue", "go_to", 
                   "label", "call", "variable", "type", "procedural", "expr_or_assign", 
                   "expr", "comment" ];

function AcslParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    //return this;
}

AcslParser.prototype = Object.create(antlr4.Parser.prototype);
AcslParser.prototype.constructor = AcslParser;

Object.defineProperty(AcslParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

AcslParser.EOF = antlr4.Token.EOF;
AcslParser.T__0 = 1;
AcslParser.T__1 = 2;
AcslParser.T__2 = 3;
AcslParser.T__3 = 4;
AcslParser.T__4 = 5;
AcslParser.T__5 = 6;
AcslParser.T__6 = 7;
AcslParser.T__7 = 8;
AcslParser.T__8 = 9;
AcslParser.PROGRAM = 10;
AcslParser.END = 11;
AcslParser.DISCRETE = 12;
AcslParser.INTERVAL = 13;
AcslParser.SCHEDULE = 14;
AcslParser.INITIAL = 15;
AcslParser.TERMINAL = 16;
AcslParser.CONSTANT = 17;
AcslParser.DYNAMIC = 18;
AcslParser.ALGORITHM = 19;
AcslParser.MAXTERVAL = 20;
AcslParser.MINTERVAL = 21;
AcslParser.CINTERVAL = 22;
AcslParser.NSTEPS = 23;
AcslParser.DERIVATIVE = 24;
AcslParser.AND = 25;
AcslParser.EQ = 26;
AcslParser.GE = 27;
AcslParser.GT = 28;
AcslParser.LE = 29;
AcslParser.LT = 30;
AcslParser.NE = 31;
AcslParser.OR = 32;
AcslParser.XOR = 33;
AcslParser.AT = 34;
AcslParser.IF = 35;
AcslParser.THEN = 36;
AcslParser.ELSE = 37;
AcslParser.ENDIF = 38;
AcslParser.ENDSPACEIF = 39;
AcslParser.PROCEDURAL = 40;
AcslParser.TRUE = 41;
AcslParser.FALSE = 42;
AcslParser.NOT = 43;
AcslParser.TABLE = 44;
AcslParser.PARAMETER = 45;
AcslParser.DO = 46;
AcslParser.CONTINUE = 47;
AcslParser.GO = 48;
AcslParser.TO = 49;
AcslParser.CALL = 50;
AcslParser.VARIABLE = 51;
AcslParser.DIMENSION = 52;
AcslParser.REAL = 53;
AcslParser.DOUBLEPRECISION = 54;
AcslParser.INTEGER = 55;
AcslParser.LOGICAL = 56;
AcslParser.CHARACTER = 57;
AcslParser.STRING = 58;
AcslParser.INT = 59;
AcslParser.FLOAT = 60;
AcslParser.ID = 61;
AcslParser.EQUALS = 62;
AcslParser.LESSTHAN = 63;
AcslParser.GREATERTHAN = 64;
AcslParser.COMMA = 65;
AcslParser.SLASH = 66;
AcslParser.COMMENT = 67;
AcslParser.WS = 68;

AcslParser.RULE_acsl = 0;
AcslParser.RULE_program = 1;
AcslParser.RULE_statement = 2;
AcslParser.RULE_discrete = 3;
AcslParser.RULE_interval = 4;
AcslParser.RULE_initial = 5;
AcslParser.RULE_terminal = 6;
AcslParser.RULE_constant = 7;
AcslParser.RULE_schedule = 8;
AcslParser.RULE_dynamic = 9;
AcslParser.RULE_algorithm = 10;
AcslParser.RULE_maxterval = 11;
AcslParser.RULE_minterval = 12;
AcslParser.RULE_cinterval = 13;
AcslParser.RULE_nsteps = 14;
AcslParser.RULE_derivative = 15;
AcslParser.RULE_if_block = 16;
AcslParser.RULE_else_if_end_block = 17;
AcslParser.RULE_then_block = 18;
AcslParser.RULE_if_logical = 19;
AcslParser.RULE_table = 20;
AcslParser.RULE_parameter = 21;
AcslParser.RULE_do_continue = 22;
AcslParser.RULE_go_to = 23;
AcslParser.RULE_label = 24;
AcslParser.RULE_call = 25;
AcslParser.RULE_variable = 26;
AcslParser.RULE_type = 27;
AcslParser.RULE_procedural = 28;
AcslParser.RULE_expr_or_assign = 29;
AcslParser.RULE_expr = 30;
AcslParser.RULE_comment = 31;

function AcslContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = AcslParser.RULE_acsl;
    return this;
}

AcslContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AcslContext.prototype.constructor = AcslContext;


 
AcslContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ProgramWithCommentsContext(parser, ctx) {
	AcslContext.call(this, parser);
    AcslContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ProgramWithCommentsContext.prototype = Object.create(AcslContext.prototype);
ProgramWithCommentsContext.prototype.constructor = ProgramWithCommentsContext;

AcslParser.ProgramWithCommentsContext = ProgramWithCommentsContext;

ProgramWithCommentsContext.prototype.PROGRAM = function() {
    return this.getToken(AcslParser.PROGRAM, 0);
};

ProgramWithCommentsContext.prototype.END = function() {
    return this.getToken(AcslParser.END, 0);
};

ProgramWithCommentsContext.prototype.program = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ProgramContext);
    } else {
        return this.getTypedRuleContext(ProgramContext,i);
    }
};

ProgramWithCommentsContext.prototype.comment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CommentContext);
    } else {
        return this.getTypedRuleContext(CommentContext,i);
    }
};
ProgramWithCommentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.enterProgramWithComments(this);
	}
};

ProgramWithCommentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.exitProgramWithComments(this);
	}
};

ProgramWithCommentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AcslVisitor ) {
        return visitor.visitProgramWithComments(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ProgramWithoutCommentsContext(parser, ctx) {
	AcslContext.call(this, parser);
    AcslContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ProgramWithoutCommentsContext.prototype = Object.create(AcslContext.prototype);
ProgramWithoutCommentsContext.prototype.constructor = ProgramWithoutCommentsContext;

AcslParser.ProgramWithoutCommentsContext = ProgramWithoutCommentsContext;

ProgramWithoutCommentsContext.prototype.PROGRAM = function() {
    return this.getToken(AcslParser.PROGRAM, 0);
};

ProgramWithoutCommentsContext.prototype.END = function() {
    return this.getToken(AcslParser.END, 0);
};

ProgramWithoutCommentsContext.prototype.program = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ProgramContext);
    } else {
        return this.getTypedRuleContext(ProgramContext,i);
    }
};
ProgramWithoutCommentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.enterProgramWithoutComments(this);
	}
};

ProgramWithoutCommentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.exitProgramWithoutComments(this);
	}
};

ProgramWithoutCommentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AcslVisitor ) {
        return visitor.visitProgramWithoutComments(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function HeadedProgramWithCommentsContext(parser, ctx) {
	AcslContext.call(this, parser);
    AcslContext.prototype.copyFrom.call(this, ctx);
    return this;
}

HeadedProgramWithCommentsContext.prototype = Object.create(AcslContext.prototype);
HeadedProgramWithCommentsContext.prototype.constructor = HeadedProgramWithCommentsContext;

AcslParser.HeadedProgramWithCommentsContext = HeadedProgramWithCommentsContext;

HeadedProgramWithCommentsContext.prototype.PROGRAM = function() {
    return this.getToken(AcslParser.PROGRAM, 0);
};

HeadedProgramWithCommentsContext.prototype.END = function() {
    return this.getToken(AcslParser.END, 0);
};

HeadedProgramWithCommentsContext.prototype.comment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CommentContext);
    } else {
        return this.getTypedRuleContext(CommentContext,i);
    }
};

HeadedProgramWithCommentsContext.prototype.program = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ProgramContext);
    } else {
        return this.getTypedRuleContext(ProgramContext,i);
    }
};
HeadedProgramWithCommentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.enterHeadedProgramWithComments(this);
	}
};

HeadedProgramWithCommentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.exitHeadedProgramWithComments(this);
	}
};

HeadedProgramWithCommentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AcslVisitor ) {
        return visitor.visitHeadedProgramWithComments(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function HeadedProgramWithoutCommentsContext(parser, ctx) {
	AcslContext.call(this, parser);
    AcslContext.prototype.copyFrom.call(this, ctx);
    return this;
}

HeadedProgramWithoutCommentsContext.prototype = Object.create(AcslContext.prototype);
HeadedProgramWithoutCommentsContext.prototype.constructor = HeadedProgramWithoutCommentsContext;

AcslParser.HeadedProgramWithoutCommentsContext = HeadedProgramWithoutCommentsContext;

HeadedProgramWithoutCommentsContext.prototype.PROGRAM = function() {
    return this.getToken(AcslParser.PROGRAM, 0);
};

HeadedProgramWithoutCommentsContext.prototype.END = function() {
    return this.getToken(AcslParser.END, 0);
};

HeadedProgramWithoutCommentsContext.prototype.comment = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(CommentContext);
    } else {
        return this.getTypedRuleContext(CommentContext,i);
    }
};

HeadedProgramWithoutCommentsContext.prototype.program = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ProgramContext);
    } else {
        return this.getTypedRuleContext(ProgramContext,i);
    }
};
HeadedProgramWithoutCommentsContext.prototype.enterRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.enterHeadedProgramWithoutComments(this);
	}
};

HeadedProgramWithoutCommentsContext.prototype.exitRule = function(listener) {
    if(listener instanceof AcslListener ) {
        listener.exitHeadedProgramWithoutComments(this);
	}
};

HeadedProgramWithoutCommentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof AcslVisitor ) {
        return visitor.visitHeadedProgramWithoutComments(this);
    } else {
        return visitor.visitChildren(this);
    }
};



AcslParser.AcslContext = AcslContext;

AcslParser.prototype.acsl = function() {

    var localctx = new AcslContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, AcslParser.RULE_acsl);
    var _la = 0; // Token type
    try {
        this.state = 117;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            localctx = new HeadedProgramWithCommentsContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 65; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 64;
                this.comment();
                this.state = 67; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===AcslParser.COMMENT);
            this.state = 69;
            this.match(AcslParser.PROGRAM);
            this.state = 73;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AcslParser.T__0) | (1 << AcslParser.T__6) | (1 << AcslParser.T__7) | (1 << AcslParser.DISCRETE) | (1 << AcslParser.INTERVAL) | (1 << AcslParser.SCHEDULE) | (1 << AcslParser.INITIAL) | (1 << AcslParser.TERMINAL) | (1 << AcslParser.CONSTANT) | (1 << AcslParser.DYNAMIC) | (1 << AcslParser.ALGORITHM) | (1 << AcslParser.MAXTERVAL) | (1 << AcslParser.MINTERVAL) | (1 << AcslParser.CINTERVAL) | (1 << AcslParser.NSTEPS))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (AcslParser.IF - 35)) | (1 << (AcslParser.TRUE - 35)) | (1 << (AcslParser.FALSE - 35)) | (1 << (AcslParser.NOT - 35)) | (1 << (AcslParser.TABLE - 35)) | (1 << (AcslParser.PARAMETER - 35)) | (1 << (AcslParser.DO - 35)) | (1 << (AcslParser.GO - 35)) | (1 << (AcslParser.CALL - 35)) | (1 << (AcslParser.VARIABLE - 35)) | (1 << (AcslParser.DIMENSION - 35)) | (1 << (AcslParser.REAL - 35)) | (1 << (AcslParser.DOUBLEPRECISION - 35)) | (1 << (AcslParser.INTEGER - 35)) | (1 << (AcslParser.LOGICAL - 35)) | (1 << (AcslParser.CHARACTER - 35)) | (1 << (AcslParser.STRING - 35)) | (1 << (AcslParser.INT - 35)) | (1 << (AcslParser.FLOAT - 35)) | (1 << (AcslParser.ID - 35)))) !== 0) || _la===AcslParser.COMMENT) {
                this.state = 70;
                this.program();
                this.state = 75;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 76;
            this.match(AcslParser.END);
            this.state = 78; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 77;
                this.comment();
                this.state = 80; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===AcslParser.COMMENT);
            break;

        case 2:
            localctx = new HeadedProgramWithoutCommentsContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 83; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 82;
                this.comment();
                this.state = 85; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===AcslParser.COMMENT);
            this.state = 87;
            this.match(AcslParser.PROGRAM);
            this.state = 91;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AcslParser.T__0) | (1 << AcslParser.T__6) | (1 << AcslParser.T__7) | (1 << AcslParser.DISCRETE) | (1 << AcslParser.INTERVAL) | (1 << AcslParser.SCHEDULE) | (1 << AcslParser.INITIAL) | (1 << AcslParser.TERMINAL) | (1 << AcslParser.CONSTANT) | (1 << AcslParser.DYNAMIC) | (1 << AcslParser.ALGORITHM) | (1 << AcslParser.MAXTERVAL) | (1 << AcslParser.MINTERVAL) | (1 << AcslParser.CINTERVAL) | (1 << AcslParser.NSTEPS))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (AcslParser.IF - 35)) | (1 << (AcslParser.TRUE - 35)) | (1 << (AcslParser.FALSE - 35)) | (1 << (AcslParser.NOT - 35)) | (1 << (AcslParser.TABLE - 35)) | (1 << (AcslParser.PARAMETER - 35)) | (1 << (AcslParser.DO - 35)) | (1 << (AcslParser.GO - 35)) | (1 << (AcslParser.CALL - 35)) | (1 << (AcslParser.VARIABLE - 35)) | (1 << (AcslParser.DIMENSION - 35)) | (1 << (AcslParser.REAL - 35)) | (1 << (AcslParser.DOUBLEPRECISION - 35)) | (1 << (AcslParser.INTEGER - 35)) | (1 << (AcslParser.LOGICAL - 35)) | (1 << (AcslParser.CHARACTER - 35)) | (1 << (AcslParser.STRING - 35)) | (1 << (AcslParser.INT - 35)) | (1 << (AcslParser.FLOAT - 35)) | (1 << (AcslParser.ID - 35)))) !== 0) || _la===AcslParser.COMMENT) {
                this.state = 88;
                this.program();
                this.state = 93;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 94;
            this.match(AcslParser.END);
            break;

        case 3:
            localctx = new ProgramWithCommentsContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 96;
            this.match(AcslParser.PROGRAM);
            this.state = 100;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AcslParser.T__0) | (1 << AcslParser.T__6) | (1 << AcslParser.T__7) | (1 << AcslParser.DISCRETE) | (1 << AcslParser.INTERVAL) | (1 << AcslParser.SCHEDULE) | (1 << AcslParser.INITIAL) | (1 << AcslParser.TERMINAL) | (1 << AcslParser.CONSTANT) | (1 << AcslParser.DYNAMIC) | (1 << AcslParser.ALGORITHM) | (1 << AcslParser.MAXTERVAL) | (1 << AcslParser.MINTERVAL) | (1 << AcslParser.CINTERVAL) | (1 << AcslParser.NSTEPS))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (AcslParser.IF - 35)) | (1 << (AcslParser.TRUE - 35)) | (1 << (AcslParser.FALSE - 35)) | (1 << (AcslParser.NOT - 35)) | (1 << (AcslParser.TABLE - 35)) | (1 << (AcslParser.PARAMETER - 35)) | (1 << (AcslParser.DO - 35)) | (1 << (AcslParser.GO - 35)) | (1 << (AcslParser.CALL - 35)) | (1 << (AcslParser.VARIABLE - 35)) | (1 << (AcslParser.DIMENSION - 35)) | (1 << (AcslParser.REAL - 35)) | (1 << (AcslParser.DOUBLEPRECISION - 35)) | (1 << (AcslParser.INTEGER - 35)) | (1 << (AcslParser.LOGICAL - 35)) | (1 << (AcslParser.CHARACTER - 35)) | (1 << (AcslParser.STRING - 35)) | (1 << (AcslParser.INT - 35)) | (1 << (AcslParser.FLOAT - 35)) | (1 << (AcslParser.ID - 35)))) !== 0) || _la===AcslParser.COMMENT) {
                this.state = 97;
                this.program();
                this.state = 102;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 103;
            this.match(AcslParser.END);
            this.state = 105; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 104;
                this.comment();
                this.state = 107; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===AcslParser.COMMENT);
            break;
